Documenta endpoits do CitiesController
